# OwnSurface-Vuln

./: .env.example  .gitignore  README.md  ownsurface.html  package-lock.json  package.json  turbo.json
apps/api/: .dockerignore  Cargo.toml  Dockerfile
apps/api/src/: config.rs  errors.rs  main.rs  metrics.rs  state.rs
apps/api/src/middleware/: auth.rs  cors.rs  mod.rs  rate_limit.rs  security_headers.rs
apps/api/src/models/: collection.rs  follow.rs  lead.rs  leaderboard.rs  mod.rs  report.rs  scan_result.rs  user.rs  watchlist.rs
apps/api/src/routes/: ai_visibility.rs  api_spec.rs  attack_surface.rs  auth.rs  billing.rs  bulk.rs  collections.rs  deep_scan.rs  domain_scan.rs  domains.rs  enrichment.rs  extension.rs  follows.rs  health.rs  history.rs  leaderboard.rs  leads.rs  mentions.rs  mobile.rs  mod.rs  monitoring.rs  offensive.rs  profiles.rs  radar.rs  reports.rs  scan.rs  showcase.rs  threads.rs  watchlist.rs
apps/api/src/services/: ai_summary.rs  alert_delivery.rs  alerts.rs  cache.rs  db.rs  mailer.rs  mcp.rs  mod.rs  pdf_export.rs  queue.rs  stripe.rs
apps/api/tests/: unit_tests.rs
apps/dashboard/: .dockerignore  Dockerfile  next.config.ts  package.json  proxy.ts  sentry.client.config.ts  tailwind.config.ts
infra/: .env.example  deploy-aws.sh  docker-compose.prod.yml  docker-compose.yml  migrate.sh  nginx.conf
infra/aws/: SES_AUTH_OTP_SETUP.md  request_ses_production_access.sh  setup_ses_auth_otp.sh
infra/docker/: Dockerfile.worker-base
infra/k8s/: api-deployment.yaml  ingress.yaml  worker-deployment.yaml
infra/migrations/: 001_users.sql  (+41 more)
(+248 files in other folders)
